Add wait parameter to POST /batches
Add `wait` query parameter to the `POST /batches` endpoint.
If set, the REST API will wait to respond until all submitted
batches have been committed or a timeout has expired. The timeout
defaults to the REST API's internal timeout (usually 300s), but
can be explicitly set by setting wait to any positive integer.

If told to wait, rather than responding with a `link` with a
`/batch_status` endpoint, the API will respond with a `data`
property, with the committed status of each batch.

Example use:
  * `POST /batches` - returns immediately with batch status `link`
  * `POST /batches?wait=false` - returns immediately with `link`
  * `POST /batches?wait` - returns when committed or default
     timeout has expired, with batch status `data`
  * `POST /batches?wait=30` - returns when committed or 30s
     timeout has expired, with batch status `data`
